# nrf52840-scd41-sensor-driver

./: CMakeLists.txt  README.md  prj.conf
src/: main.c
src/bsp/: i2c_driver.c  i2c_driver.h
src/scd41/: scd41.c  scd41.h
